--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
           </li>
 
         </ul>
-      </nav><!-- .main-nav -->
--->
+      </nav>
+  --><!-- .main-nav -->
+
     </div>
   </header><!-- #header -->
 
