--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Rapid Bootstrap Template</title>
+  <title>Peach Lab</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -50,29 +50,14 @@
         <h1 class="text-light"><a href="#intro" class="scrollto"><span>Peach Lab</span></a></h1>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
-<!--
+
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
-         <li><a href="#team">Shop</a></li>
-         <li><a href="#portfolio">Events</a></li>
-            <li><a href="#about">Art</a></li>
-              <li><a href="#about">Music</a></li>
-                <li><a href="#about">Technology</a></li>
-
-
-          <li class="drop-down"><a href="">Resources</a>
-            <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Newsletter</a></li>
-              <li><a href="#">Press Kit</a></li>
-              <li><a href="#footer">Contact</a></li>
-            </ul>
-          </li>
-
+      
         </ul>
       </nav>
-  --><!-- .main-nav -->
+  <!-- .main-nav -->
 
     </div>
   </header><!-- #header -->
@@ -86,7 +71,7 @@
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Coming Soon</h3>
           <div>
-            <a href="https://facebook.com/peachlab.io" class="btn-get-started scrollto">Facebook Page</a>
+            <a href="https://facebook.com/peachlab.io" class="btn-get-started scrollto">Faceboo</a>    <a href="https://twitter.com/peachlab_io" class="btn-get-started scrollto">Twitter</a>
           </div>
         </div>
 
