--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         <h1 class="text-light"><a href="#intro" class="scrollto"><span>Peach Lab</span></a></h1>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
-
+<!--
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="#intro">Home</a></li>
       
         </ul>
-      </nav>
+      </nav>-->
   <!-- .main-nav -->
 
     </div>
@@ -71,13 +71,11 @@
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Coming Soon</h3>
           <div>
-            <a href="https://facebook.com/peachlab.io" class="btn-get-started scrollto">Faceboo</a>    <a href="https://twitter.com/peachlab_io" class="btn-get-started scrollto">Twitter</a>
+            <a href="https://facebook.com/peachlab.io" class="btn-get-started scrollto">Facebook</a>    <a href="https://twitter.com/peachlab_io" class="btn-get-started scrollto">Twitter</a>
           </div>
         </div>
 
-        <div class="col-md-6 intro-img order-md-last order-first">
-          <img src="img/intro-img.svg" alt="" class="img-fluid">
-        </div>
+       
       </div>
 
     </div>
