--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-md-6 intro-info order-md-first order-last">
           <h2>Coming Soon</h3>
           <div>
-            <a href="https://facebook.com/peachlab.io" class="btn-get-started scrollto">Facebook</a>    <a href="https://twitter.com/peachlab_io" class="btn-get-started scrollto">Twitter</a>
+            <a href="https://facebook.com/peachlab.io" class="btn-get-started scrollto">Facebook</a>  
           </div>
         </div>
 
